<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglast"
    tools:context=".GameOverActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-118dp">

        <TextView
            android:id="@+id/displayHighestScore"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="41dp"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:text="@string/game_over_high_score"
            android:textAlignment="center"
            android:textColor="@color/teal"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="218dp"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:text="@string/game_over"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/displayScore"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_above="@+id/play_again_btn"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="30dp"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:text="@string/game_over_score"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play_again_btn"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="102dp"
            android:backgroundTint="@color/carolina"
            android:text="@string/play_again"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:rippleColor="@color/carolina"
            app:strokeColor="@color/carolina" />



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
